# adk

./: .dockerignore  .gitignore  kagenti-adk.code-workspace  pnpm-lock.yaml  pnpm-workspace.yaml  tasks.toml
.github/: dependabot.yml
.github/workflows/: build-buildkit.yaml  ci.yaml  claude.yaml  docs-check.yaml  docs-deploy.yml  project.yml  release.yaml  scorecard.yaml  security-scans.yaml
agents/: tasks.toml
agents/adk-support-agent/: Dockerfile  pyproject.toml
agents/canvas/: Dockerfile
agents/chat/: Dockerfile
agents/deepagents_content_builder/: Dockerfile
agents/form/: Dockerfile
agents/langgraph-reflection/: Dockerfile
agents/rag/: Dockerfile
apps/adk-cli/: pyproject.toml
apps/adk-py/: README.md  pyproject.toml  tasks.toml
apps/adk-py/examples/: agent.py
apps/adk-server/: Dockerfile  pyproject.toml  tasks.toml
apps/adk-server/tests/: conftest.py
apps/adk-ts/: README.md  package.json
apps/adk-ts/tests/: helpers.ts  utils.ts
apps/adk-ui/: package.json  template.env
apps/docs-site/: package.json
docs/: docs.json
docs/development/agent-integration/: memory-store.mdx
docs/development/custom-ui/: a2a-client.mdx  agent-requirements.mdx  agent-responses.mdx  architecture-guide.mdx  error-handling.mdx  getting-started.mdx  user-messages.mdx
docs/stable/sdk/: mcp.mdx  (+5 more)
examples/agent-integration/memoryhub/memoryhub-recall/: pyproject.toml
examples/agent-integration/memoryhub/memoryhub-recall/src/memoryhub_recall/: agent.py
helm/: values.yaml
skills/kagenti-adk-ui/: FINDINGS.md  SKILL.md
skills/kagenti-adk-wrapper/: SKILL.md
(+83 files in other folders)
